# GC-pokemon-RNG-manipulation-assistant

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  appveyor.yml
Source/: CMakeLists.txt  GC-pokemon-RNG-manipulation-assistant.sln  GC-pokemon-RNG-manipulation-assistant.vcxproj  Qt.props  main.cpp
Source/Common/: Common.cpp  Common.h  CommonTypes.h
Source/GUI/: GUICommon.cpp  GUICommon.h  MainWindow.cpp  MainWindow.h  SPokemonRNG.cpp  SPokemonRNG.h
Source/GUI/Predictor/: PredictorWidget.cpp  PredictorWidget.h
Source/GUI/SeedFinder/: SeedFinderPassPage.cpp  SeedFinderPassPage.h  SeedFinderWizard.cpp  SeedFinderWizard.h
Source/GUI/Settings/: ColosseumTab.cpp  ColosseumTab.h  CommonPredictorFiltersWidget.cpp  CommonPredictorFiltersWidget.h  DlgSettings.cpp  DlgSettings.h  GaleDarknessTab.cpp  GaleDarknessTab.h  GeneralTab.cpp  GeneralTab.h  SConfig.cpp  SConfig.h  SeedFinderTab.cpp  SeedFinderTab.h
Source/GUI/StartersPrediction/: StartersPredictionWidget.cpp  StartersPredictionWidget.h
Source/GUI/StatsReporter/: PokemonPropertiesFrame.cpp  PokemonPropertiesFrame.h  StatsReporterWidget.cpp  StatsReporterWidget.h
Source/PokemonRNGSystem/: BaseRNGSystem.cpp  BaseRNGSystem.h  SPokemonRNG.cpp  SPokemonRNG.h
Source/PokemonRNGSystem/Colosseum/: ColosseumRNGSystem.cpp  ColosseumRNGSystem.h
Source/PokemonRNGSystem/XD/: GaleDarknessRNGSystem.cpp  GaleDarknessRNGSystem.h
